--- a/css/css.css
+++ b/css/css.css
@@ -46,7 +46,7 @@ p{
 .btn {
   background: #3498db;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Montserrat', sans-serif;
   color: #f5f5f5;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
@@ -73,7 +73,7 @@ p{
 
 .bottombox {
   background-color: #66BFBF;
-  padding: 30px 20px 30px 20px;
+  padding: 50px 0 20px 0;
 }
 
 .solo {
